Created timestamped predictions

--- a/MDA_main_notebook.ipynb
+++ b/MDA_main_notebook.ipynb
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1031,11 +1031,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_timestamped = pd.concat([pd.DataFrame(delayed_df_test['result_timestamp']), pd.DataFrame(best_model_predictions)], axis = 1)\n"
+    "delayed_df_test_timestamp = pd.DataFrame(delayed_df_test['result_timestamp'])\n",
+    "delayed_df_test_timestamp = delayed_df_test_timestamp.reset_index()\n",
+    "best_model_predictions = pd.DataFrame(best_model_predictions, columns=['predictions'])\n",
+    "best_model_predictions = best_model_predictions.reset_index()\n",
+    "predictions_timestamped = pd.concat([delayed_df_test_timestamp, best_model_predictions], axis = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         index    result_timestamp\n",
+      "0            0 2022-04-06 17:40:00\n",
+      "1            1 2022-04-06 17:50:00\n",
+      "2            2 2022-04-06 17:50:00\n",
+      "3            3 2022-04-06 17:50:00\n",
+      "4            4 2022-04-06 18:00:00\n",
+      "...        ...                 ...\n",
+      "106536  106687 2022-12-31 23:10:00\n",
+      "106537  106688 2022-12-31 23:20:00\n",
+      "106538  106689 2022-12-31 23:30:00\n",
+      "106539  106690 2022-12-31 23:40:00\n",
+      "106540  106691 2022-12-31 23:50:00\n",
+      "\n",
+      "[106541 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(delayed_df_test_timestamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "106541\n",
+      "106541\n",
+      "106541\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(best_model_predictions))\n",
+    "print(len(delayed_df_test['result_timestamp']))\n",
+    "print(len(predictions_timestamped['result_timestamp']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index               0\n",
+       "result_timestamp    0\n",
+       "index               0\n",
+       "predictions         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_timestamped.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>result_timestamp</th>\n",
+       "      <th>index</th>\n",
+       "      <th>predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-04-06 17:40:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.257969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-04-06 17:50:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.964897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-04-06 17:50:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.343533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2022-04-06 17:50:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.624657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2022-04-06 18:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>55.381210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106536</th>\n",
+       "      <td>106687</td>\n",
+       "      <td>2022-12-31 23:10:00</td>\n",
+       "      <td>106536</td>\n",
+       "      <td>52.412140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106537</th>\n",
+       "      <td>106688</td>\n",
+       "      <td>2022-12-31 23:20:00</td>\n",
+       "      <td>106537</td>\n",
+       "      <td>52.496964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106538</th>\n",
+       "      <td>106689</td>\n",
+       "      <td>2022-12-31 23:30:00</td>\n",
+       "      <td>106538</td>\n",
+       "      <td>52.513515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106539</th>\n",
+       "      <td>106690</td>\n",
+       "      <td>2022-12-31 23:40:00</td>\n",
+       "      <td>106539</td>\n",
+       "      <td>52.466835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106540</th>\n",
+       "      <td>106691</td>\n",
+       "      <td>2022-12-31 23:50:00</td>\n",
+       "      <td>106540</td>\n",
+       "      <td>52.454586</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>106541 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         index    result_timestamp   index  predictions\n",
+       "0            0 2022-04-06 17:40:00       0    56.257969\n",
+       "1            1 2022-04-06 17:50:00       1    54.964897\n",
+       "2            2 2022-04-06 17:50:00       2    55.343533\n",
+       "3            3 2022-04-06 17:50:00       3    56.624657\n",
+       "4            4 2022-04-06 18:00:00       4    55.381210\n",
+       "...        ...                 ...     ...          ...\n",
+       "106536  106687 2022-12-31 23:10:00  106536    52.412140\n",
+       "106537  106688 2022-12-31 23:20:00  106537    52.496964\n",
+       "106538  106689 2022-12-31 23:30:00  106538    52.513515\n",
+       "106539  106690 2022-12-31 23:40:00  106539    52.466835\n",
+       "106540  106691 2022-12-31 23:50:00  106540    52.454586\n",
+       "\n",
+       "[106541 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_timestamped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_timestamped = predictions_timestamped.drop('index',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>result_timestamp</th>\n",
+       "      <th>predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-04-06 17:40:00</td>\n",
+       "      <td>56.257969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-04-06 17:50:00</td>\n",
+       "      <td>54.964897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-04-06 17:50:00</td>\n",
+       "      <td>55.343533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-04-06 17:50:00</td>\n",
+       "      <td>56.624657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-04-06 18:00:00</td>\n",
+       "      <td>55.381210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106536</th>\n",
+       "      <td>2022-12-31 23:10:00</td>\n",
+       "      <td>52.412140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106537</th>\n",
+       "      <td>2022-12-31 23:20:00</td>\n",
+       "      <td>52.496964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106538</th>\n",
+       "      <td>2022-12-31 23:30:00</td>\n",
+       "      <td>52.513515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106539</th>\n",
+       "      <td>2022-12-31 23:40:00</td>\n",
+       "      <td>52.466835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106540</th>\n",
+       "      <td>2022-12-31 23:50:00</td>\n",
+       "      <td>52.454586</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>106541 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          result_timestamp  predictions\n",
+       "0      2022-04-06 17:40:00    56.257969\n",
+       "1      2022-04-06 17:50:00    54.964897\n",
+       "2      2022-04-06 17:50:00    55.343533\n",
+       "3      2022-04-06 17:50:00    56.624657\n",
+       "4      2022-04-06 18:00:00    55.381210\n",
+       "...                    ...          ...\n",
+       "106536 2022-12-31 23:10:00    52.412140\n",
+       "106537 2022-12-31 23:20:00    52.496964\n",
+       "106538 2022-12-31 23:30:00    52.513515\n",
+       "106539 2022-12-31 23:40:00    52.466835\n",
+       "106540 2022-12-31 23:50:00    52.454586\n",
+       "\n",
+       "[106541 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_timestamped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_timestamped.to_csv('predictions_timestamped.csv', index=False)"
    ]
   },
   {
