added model features, clustering on object id and cleaned the data

--- a/Final_optimization.ipynb
+++ b/Final_optimization.ipynb
@@ -14,7 +14,10 @@
     "import seaborn as sns\n",
     "import coiled\n",
     "import dask\n",
-    "import glob"
+    "import glob\n",
+    "\n",
+    "##split the data into 80,20 non randomly\n",
+    "##Read me finish \n"
    ]
   },
   {
@@ -30,7 +33,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:43643</li>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:41375</li>\n",
        "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a></li>\n",
        "</ul>\n",
        "</td>\n",
@@ -46,7 +49,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:43643' processes=4 threads=36, memory=21.47 GB>"
+       "<Client: 'tcp://127.0.0.1:41375' processes=4 threads=36, memory=21.47 GB>"
       ]
      },
      "execution_count": 2,
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +142,10 @@
     "\n",
     "    for month in months:\n",
     "        flat_list = glob.glob(os.path.join(base_folder, month, '*_parquet/*.parquet'))\n",
-    "        ddf = dd.read_parquet(flat_list, columns=[\"#object_id\", \"description\", \"result_timestamp\", \"laeq\"]) #Read only columns that are going to be used in the model.\n",
+    "        ddf = dd.read_parquet(flat_list, columns=[\"result_timestamp\", \"laeq\", \"#object_id\"]) # Read only columns that are going to be used in the model.\n",
     "\n",
     "        # Convert to the desired data types to boost the performance. Note that object type are very computationaly expensive and it is recommended to specify the corresponding datatype for each column.\n",
-    "        ddf = ddf.astype({'description': 'string', 'laeq': 'float'})\n",
+    "        ddf = ddf.astype({'#object_id': 'int', 'laeq': 'float'})\n",
     "\n",
     "        # Set the timestamp into the correct form and set the index to result_timestamp. Note that this is a bottleneck step.\n",
     "        ddf[\"result_timestamp\"] = dd.to_datetime(ddf[\"result_timestamp\"], dayfirst=True, format=\"%d/%m/%Y %H:%M:%S.%f\")\n",
@@ -150,7 +153,7 @@
     "\n",
     "        pandas_df = ddf_sorted.compute().reset_index()  # Convert to Pandas DataFrame.\n",
     "\n",
-    "        pandas3 = pandas_df.groupby(\"description\").resample(\"10T\", on=\"result_timestamp\").agg({'laeq': 'mean'}).reset_index()\n",
+    "        pandas3 = pandas_df.groupby(\"#object_id\").resample(\"10T\", on=\"result_timestamp\").agg({'laeq': 'mean'}).reset_index()\n",
     "\n",
     "        dfs.append(pandas3)\n",
     "\n",
@@ -162,102 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Call the function to process the data for each month\n",
-    "table = process_data_by_month()\n"
+    "table = process_data_by_month()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>description</th>\n",
-       "      <th>result_timestamp</th>\n",
-       "      <th>laeq</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MP 03: Naamsestraat 62 Taste</td>\n",
-       "      <td>2022-01-01 00:00:00</td>\n",
-       "      <td>63.267554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MP 03: Naamsestraat 62 Taste</td>\n",
-       "      <td>2022-01-01 00:10:00</td>\n",
-       "      <td>60.254000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MP 03: Naamsestraat 62 Taste</td>\n",
-       "      <td>2022-01-01 00:20:00</td>\n",
-       "      <td>55.143907</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MP 03: Naamsestraat 62 Taste</td>\n",
-       "      <td>2022-01-01 00:30:00</td>\n",
-       "      <td>58.230167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MP 03: Naamsestraat 62 Taste</td>\n",
-       "      <td>2022-01-01 00:40:00</td>\n",
-       "      <td>54.220466</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    description    result_timestamp       laeq\n",
-       "0  MP 03: Naamsestraat 62 Taste 2022-01-01 00:00:00  63.267554\n",
-       "1  MP 03: Naamsestraat 62 Taste 2022-01-01 00:10:00  60.254000\n",
-       "2  MP 03: Naamsestraat 62 Taste 2022-01-01 00:20:00  55.143907\n",
-       "3  MP 03: Naamsestraat 62 Taste 2022-01-01 00:30:00  58.230167\n",
-       "4  MP 03: Naamsestraat 62 Taste 2022-01-01 00:40:00  54.220466"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# View the table.\n",
-    "table.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +187,7 @@
     "        df['date'] = df['result_timestamp'].dt.date\n",
     "        df['time'] = df['result_timestamp'].dt.time\n",
     "        df['hour'] = df['result_timestamp'].dt.hour\n",
-    "        df['weekday'] = df['result_timestamp'].dt.day_name()\n",
+    "        df['weekday'] = df['result_timestamp'].dt.dayofweek\n",
     "        df['month'] = df['result_timestamp'].dt.month\n",
     "        df['weekend'] = df['weekday'].isin(['Saturday', 'Sunday'])\n",
     "        return df\n",
@@ -280,11 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define holidays that may impact the noise levels\n",
+    "# Define holidays that may impact the noise levels.\n",
     "\n",
     "class HolidayDetector:\n",
     "    def __init__(self):\n",
@@ -321,10 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define exam dates that may impact the noise levels.\n",
+    "\n",
     "\n",
     "class ExamPeriodDetector:\n",
     "    def __init__(self):\n",
@@ -351,20 +271,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Localize the datetime object to the Belgian timezone\n",
     "# This keeps in mind the change from CET to CEST in spring and CEST to CET in autumn\n",
-    "time_features['result_timestamp'] = pd.to_datetime(time_features['result_timestamp']).dt.tz_localize('CET',ambiguous='NaT',nonexistent='NaT')\n",
-    "\n",
+    "time_features['result_timestamp'] = pd.to_datetime(time_features['result_timestamp']).dt.tz_localize('CET',ambiguous='NaT', nonexistent='NaT')\n",
     "time_features = time_features.dropna(subset=['result_timestamp'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/user/leuven/351/vsc35102/.local/lib/python3.6/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add the features relvant for the modeling part of the project:\n",
+    "\n",
+    "time_features['key'] = time_features['#object_id'].astype('str') + time_features['result_timestamp'].astype('str')\n",
+    "time_features = time_features.sort_values(by=['result_timestamp','#object_id'], ascending=True)\n",
+    "\n",
+    "# Adjust the dataframe for one hot encoding\n",
+    "object_ids = [255439, 255440, 255441, 255442, 255443, 255444, 255445, 280324, 303910]\n",
+    "\n",
+    "for object_id in object_ids:\n",
+    "    column_name = str(object_id)\n",
+    "    time_features[column_name] = time_features['#object_id'] == object_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +512,7 @@
        "4         13.00       12.9415     12.952268  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,20 +530,190 @@
     "# Select the relevant location.\n",
     "weather105_location = weather[weather['ID'] == 'LC-105']\n",
     "\n",
-    "# Modify the timestamp. \n",
+    "# # Modify the timestamp. \n",
     "weather105_location.rename(columns={'DATEUTC':'result_timestamp'},inplace=True)\n",
     "weather105_location['result_timestamp'] = pd.to_datetime(weather105_location['result_timestamp'],format=\"%Y-%m-%d %H:%M:%S\")\n",
     "\n",
-    "#Add the UTC timezone information to the result_timestamp\n",
+    " #Add the UTC timezone information to the result_timestamp\n",
     "weather105_location['result_timestamp'] = pd.to_datetime(weather105_location['result_timestamp']).dt.tz_localize('UTC')\n",
     "\n",
-    "#Change weather data to CET timezone\n",
+    "# #Change weather data to CET timezone\n",
     "weather105_location['result_timestamp'] = pd.to_datetime(weather105_location['result_timestamp']).dt.tz_convert('CET')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>result_timestamp</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LC_HUMIDITY</th>\n",
+       "      <th>LC_DWPTEMP</th>\n",
+       "      <th>LC_n</th>\n",
+       "      <th>LC_RAD</th>\n",
+       "      <th>LC_RAININ</th>\n",
+       "      <th>LC_DAILYRAIN</th>\n",
+       "      <th>LC_WINDDIR</th>\n",
+       "      <th>LC_WINDSPEED</th>\n",
+       "      <th>LC_RAD60</th>\n",
+       "      <th>LC_TEMP_QCL0</th>\n",
+       "      <th>LC_TEMP_QCL1</th>\n",
+       "      <th>LC_TEMP_QCL2</th>\n",
+       "      <th>LC_TEMP_QCL3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>972000</th>\n",
+       "      <td>2022-01-01 01:10:00+01:00</td>\n",
+       "      <td>LC-105</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>11.88</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-48.0</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.223</td>\n",
+       "      <td>13.23639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972001</th>\n",
+       "      <td>2022-01-01 01:20:00+01:00</td>\n",
+       "      <td>LC-105</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.223</td>\n",
+       "      <td>13.16699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972002</th>\n",
+       "      <td>2022-01-01 01:30:00+01:00</td>\n",
+       "      <td>LC-105</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-52.0</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.223</td>\n",
+       "      <td>13.19886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972003</th>\n",
+       "      <td>2022-01-01 01:40:00+01:00</td>\n",
+       "      <td>LC-105</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.223</td>\n",
+       "      <td>13.16699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972004</th>\n",
+       "      <td>2022-01-01 01:50:00+01:00</td>\n",
+       "      <td>LC-105</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>13.223</td>\n",
+       "      <td>13.09212</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                result_timestamp      ID  LC_HUMIDITY  LC_DWPTEMP  LC_n  \\\n",
+       "972000 2022-01-01 01:10:00+01:00  LC-105         91.0       11.88  38.0   \n",
+       "972001 2022-01-01 01:20:00+01:00  LC-105         90.0       11.72  37.0   \n",
+       "972002 2022-01-01 01:30:00+01:00  LC-105         90.0       11.72  38.0   \n",
+       "972003 2022-01-01 01:40:00+01:00  LC-105         90.0       11.72  37.0   \n",
+       "972004 2022-01-01 01:50:00+01:00  LC-105         90.0       11.72  38.0   \n",
+       "\n",
+       "        LC_RAD  LC_RAININ  LC_DAILYRAIN  LC_WINDDIR  LC_WINDSPEED  LC_RAD60  \\\n",
+       "972000     0.0        0.0           0.0       -48.0          0.04       0.0   \n",
+       "972001     0.0        0.0           0.0        45.0          0.02       0.0   \n",
+       "972002     0.0        0.0           0.0       -52.0          0.04       0.0   \n",
+       "972003     0.0        0.0           0.0        34.0          0.02       0.0   \n",
+       "972004     0.0        0.0           0.0         0.0          0.00       0.0   \n",
+       "\n",
+       "        LC_TEMP_QCL0  LC_TEMP_QCL1  LC_TEMP_QCL2  LC_TEMP_QCL3  \n",
+       "972000         13.28         13.28        13.223      13.23639  \n",
+       "972001         13.28         13.28        13.223      13.16699  \n",
+       "972002         13.28         13.28        13.223      13.19886  \n",
+       "972003         13.28         13.28        13.223      13.16699  \n",
+       "972004         13.28         13.28        13.223      13.09212  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather105_location.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
