--- a/Final_optimization.ipynb
+++ b/Final_optimization.ipynb
@@ -14,10 +14,7 @@
     "import seaborn as sns\n",
     "import coiled\n",
     "import dask\n",
-    "import glob\n",
-    "\n",
-    "##split the data into 80,20 non randomly\n",
-    "##Read me finish \n"
+    "import glob"
    ]
   },
   {
@@ -283,22 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/user/leuven/351/vsc35102/.local/lib/python3.6/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add the features relvant for the modeling part of the project:\n",
     "\n",
