--- a/MDA_models_notebook.ipynb
+++ b/MDA_models_notebook.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "    return df_first80, df_last20\n",
     "\n",
-    "final_df_first80, final_df_last20 = split8020(final_df)"
+    "final_df_first80, final_df_last20 = split8020(final_df)\n"
    ]
   },
   {
